# icon_gen

./: .gitignore  Cargo.toml  README.md
src/: main.rs
