[package]
name = "icon_gen"
description = "Tool for creating icons of different formats from one single svg."
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ico = "0.3"
resvg = "0.44"
tiny-skia = "0.11"
usvg = "0.44"
